[setup]
name = INPMT
version = 0.1.1
license = GPL-3.0

author = Pierre Manchon
author_email = pierre.manchon@pm.me
maintainer = Pierre Manchon
maintainer_email = pierre.manchon@pm.me
url =https://github.com/pierre-manchon/INPMT

description = Impact of National Parks on Malaria Transmission

python_requires = >=3.9, <4

download_url = https://github.com/pierre-manchon/INPMT/releases/latest
               git@github.com:pierre-manchon/INPMT.git

[metadata]
license_files = LICENSE
short_license = INPMT Copyright (C) 2021 Manchon Pierre
                This program comes with ABSOLUTELY NO WARRANTY;
                This is free software, and you are welcome to redistribute it
                under certain conditions;
