[bdist_wheel]
universal=1

[metadata]
name=INPMT
version=attr: INPMT._version.__version__
author=Pierre Manchon
author_email=pierre.manchon@pm.me
maintainer=Pierre Manchon
maintainer_email=pierre.manchon@pm.me
url=https://github.com/pierre-manchon/INPMT
download_url=https://github.com/pierre-manchon/INPMT/releases/latest
             git@github.com:pierre-manchon/INPMT.git
description=Impact of National Parks on Malaria Transmission
long_description=file: README.md
long_description_content_type=text/x-markdown
keywords=gis, gis-utils, tools
license=GPL-3.0
license_files=LICENSE
short_license=INPMT Copyright (C) 2021 Manchon Pierre
              This program comes with ABSOLUTELY NO WARRANTY;
              This is free software, and you are welcome to redistribute it
              under certain conditions;
classifiers=
     # How mature is this project? Common values are
    #   1 - Planning
    #   2 - Pre-Alpha
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    #   6 - Mature
    #   7 - Inactive
    Development Status :: 5 - Production/Stable
    # Indicate who your project is intended for
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Natural Language :: English
    Environment :: Console
    Operating System :: OS Independent
    # Pick your license as you wish (should match "license" above)
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    Programming Language :: Python :: 3.10

[options]
zip_safe=False
include_package_data=True
packages=find:
package_dir=
    =src
#install_requires=file: dependencies/install.sh

[options.entry_points]
console_scripts=
    INPMT = INPMT.__main__:main

[options.package_data]
INPMT=
    py.typed

[options.packages.find]
where=src